# Boids

./: README.md  pyproject.toml
boid_project/: funcs.py  main.py  requirements.txt
boid_project/__pycache__/: funcs.alignment-120.py310.1.nbc  funcs.alignment-120.py310.nbi  funcs.alignment-125.py310.1.nbc  funcs.alignment-125.py310.nbi  funcs.alignment-129.py310.1.nbc  funcs.alignment-129.py310.nbi  funcs.alignment-164.py310.1.nbc  funcs.alignment-164.py310.nbi  funcs.alignment-193.py310.1.nbc  funcs.alignment-193.py310.nbi  funcs.alignment-195.py310.1.nbc  funcs.alignment-195.py310.nbi  funcs.cohesion-104.py310.1.nbc  funcs.cohesion-104.py310.nbi  funcs.cohesion-106.py310.1.nbc  funcs.cohesion-106.py310.nbi  funcs.cohesion-141.py310.1.nbc  funcs.cohesion-141.py310.nbi  funcs.cohesion-156.py310.1.nbc  funcs.cohesion-156.py310.nbi  funcs.cohesion-99.py310.1.nbc  funcs.cohesion-99.py310.nbi  funcs.flocking-131.py310.1.nbc  funcs.flocking-131.py310.nbi  funcs.flocking-135.py310.1.nbc  funcs.flocking-135.py310.nbi  funcs.flocking-136.py310.1.nbc  funcs.flocking-136.py310.nbi  funcs.flocking-141.py310.1.nbc  funcs.flocking-141.py310.nbi  funcs.flocking-176.py310.1.nbc  funcs.flocking-176.py310.nbi  funcs.flocking-214.py310.1.nbc  funcs.flocking-214.py310.nbi  funcs.flocking-217.py310.1.nbc  funcs.flocking-217.py310.nbi  funcs.separation-110.py310.1.nbc  funcs.separation-110.py310.nbi  funcs.separation-115.py310.1.nbc  funcs.separation-115.py310.nbi  (+8 more)
tests/: test_boid_project.py
