[tool.poetry]
name = "boid_project"
version = "0.1.0"
description = ""
authors = ["Ruslan <ruslan15-mol@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.56.4"
pyglet = "^2.0.4"
vispy = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
